--- a/front-end/public/stylesheets/App.css
+++ b/front-end/public/stylesheets/App.css
@@ -69,8 +69,9 @@ ul {
 }
 
 .ball-container {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-areas: 1fr;
+  grid-template-columns: 1fr;
   justify-content: center;
   align-items: center;
 }
@@ -86,10 +87,7 @@ ul {
 }
 
 .ball-inner {
-  width: 140px;
-  height: 140px;
   border-left: 70px solid transparent;
   border-right: 70px solid transparent;
   border-top: 140px solid var(--weldon-blue);
 }
-
