--- a/front-end/public/stylesheets/App.css
+++ b/front-end/public/stylesheets/App.css
@@ -17,6 +17,10 @@ ul {
   list-style: none;
 }
 
+.spinMeRightRoundBaby {
+  width: 100px;
+}
+
 .wrapper {
   display: grid;
   grid-template-rows: 0.5fr 0.5fr 2fr 0.5fr;
@@ -58,6 +62,8 @@ ul {
 
 .content {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   grid-area: main;
 }
@@ -67,27 +73,3 @@ ul {
   flex-direction: column;
   align-items: center;
 }
-
-/* .ball-container {
-  display: grid;
-  grid-template-areas: 1fr;
-  grid-template-columns: 1fr;
-  justify-content: center;
-  align-items: center;
-} */
-
-/* .ball-outer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 400px;
-  height: 400px;
-  border: 80px solid black;
-  border-radius: 50%;
-}
-
-.ball-inner {
-  border-left: 70px solid transparent;
-  border-right: 70px solid transparent;
-  border-top: 140px solid var(--weldon-blue);
-} */
