--- a/front-end/public/stylesheets/App.css
+++ b/front-end/public/stylesheets/App.css
@@ -26,8 +26,8 @@ ul {
   grid-template-rows: 0.5fr 0.5fr 2fr 0.5fr;
   grid-template-columns: 1fr 1fr 1fr 0.5fr;
   grid-template-areas:
-    "header header header nav"
-    "form form form nav"
+    "header header header header"
+    "form form form form"
     "main main main main"
     "footer footer footer footer";
   min-height: 100vh;
