--- a/front-end/public/stylesheets/App.css
+++ b/front-end/public/stylesheets/App.css
@@ -4,6 +4,11 @@
   padding: 0;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 html {
   font: 18px/1.5 serif;
   --rasin-black: #252422;
@@ -22,11 +27,11 @@ ul {
   grid-template-rows: 6rem 1fr 3rem;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas:
-    "header header header"
-    "main main main"
-    "footer footer footer";
+    'header header header'
+    'main main main'
+    'footer footer footer';
   min-height: 100vh;
-  background-image: url("../Capture.PNG");
+  background-image: url('../Capture.PNG');
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -102,9 +107,9 @@ option {
   font-size: 28px;
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas:
-    "priceRating"
-    "name"
-    "ratingPrice";
+    'priceRating'
+    'name'
+    'ratingPrice';
   height: 20rem;
   margin-bottom: 2rem;
   max-height: 30rem;
