--- a/front-end/public/stylesheets/App.css
+++ b/front-end/public/stylesheets/App.css
@@ -27,11 +27,11 @@ ul {
   grid-template-rows: 6rem 1fr 3rem;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas:
-    'header header header'
-    'main main main'
-    'footer footer footer';
+    "header header header"
+    "main main main"
+    "footer footer footer";
   min-height: 100vh;
-  background-image: url('../Capture.PNG');
+  background-image: url("../Capture.PNG");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -107,9 +107,9 @@ option {
   font-size: 28px;
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas:
-    'priceRating'
-    'name'
-    'ratingPrice';
+    "priceRating"
+    "name"
+    "ratingPrice";
   height: 20rem;
   margin-bottom: 2rem;
   max-height: 30rem;
@@ -140,4 +140,41 @@ option {
 
 .place-card__rating--inverted {
   transform: scaleX(-1);
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 10; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.7); /* Black w/ opacity */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  color: red;
+  margin: 0 auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  height: 100%;
+}
+
+.close-button {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
