--- a/front-end/public/stylesheets/App.css
+++ b/front-end/public/stylesheets/App.css
@@ -27,11 +27,11 @@ ul {
   grid-template-rows: 6rem 1fr 3rem;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas:
-    "header header header"
-    "main main main"
-    "footer footer footer";
+    'header header header'
+    'main main main'
+    'footer footer footer';
   min-height: 100vh;
-  background-image: url("../Capture.PNG");
+  background-image: url('../Capture.PNG');
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -107,9 +107,9 @@ option {
   font-size: 28px;
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas:
-    "priceRating"
-    "name"
-    "ratingPrice";
+    'priceRating'
+    'name'
+    'ratingPrice';
   height: 20rem;
   margin-bottom: 2rem;
   max-height: 30rem;
@@ -155,10 +155,21 @@ option {
   position: fixed;
   background: white;
   width: 80%;
-  height: 80%;
+  height: 85%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.modal-button {
+  margin: 0.5rem;
+  width: 1rem;
+}
+
+.modal-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .display-block {
