--- a/front-end/public/stylesheets/App.css
+++ b/front-end/public/stylesheets/App.css
@@ -166,10 +166,22 @@ option {
   width: 1rem;
 }
 
+.modal-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .modal-content {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.modal-content__box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .display-block {
