--- a/front-end/public/stylesheets/App.css
+++ b/front-end/public/stylesheets/App.css
@@ -159,6 +159,7 @@ option {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  box-shadow: 0 0 150px 150px;
 }
 
 .modal-button {
@@ -170,6 +171,11 @@ option {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.modal-image__area {
+  width: 40vw;
+  max-width: 40vw;
 }
 
 .modal-content {
