--- a/front-end/public/stylesheets/App.css
+++ b/front-end/public/stylesheets/App.css
@@ -190,6 +190,10 @@ option {
   justify-content: space-between;
 }
 
+.modal-place__title {
+  text-align: center;
+}
+
 .display-block {
   display: block;
 }
@@ -219,5 +223,27 @@ option {
     grid-template-columns: 0.5fr;
     grid-area: main;
     margin: 0 auto;
+  }
+
+  .modal-main {
+    position: fixed;
+    background: white;
+    width: 70%;
+    height: 70%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 150px 150px;
+  }
+
+  .modal-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-image__area {
+    width: 65vw;
+    max-width: 80vw;
   }
 }
